# duckdb-opendal-filesystem

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: MainDistributionPipeline.yml
.skills/duckdb-extension-upgrade/: SKILL.md
docs/: README.md
scripts/: bootstrap-template.py
src/: duckdb_opendalfs_extension.cpp  opendal_file_system.cpp  opendal_open_options.cpp  opendal_path.cpp  opendal_secret.cpp  opendal_uri.cpp  waddle_extension.cpp
src/include/: duckdb_opendalfs_extension.hpp  opendal_file_system.hpp  opendal_open_options.hpp  opendal_path.hpp  opendal_secret.hpp  opendal_uri.hpp
test/minio/: docker-compose.yml
test/sql/: duckdb_opendalfs.test  opendal_remote_formats.test  opendal_s3_minio.test  opendal_secret.test  waddle.test
test/sql/integration/httpfs/: connection_caching.test  metadata_stats.test  test_headers_parsed.test
test/sql/integration/httpfs/attach/: attach_remote.test
test/sql/integration/httpfs/copy/: test_remote_head_forbidden.test
test/sql/integration/httpfs/copy/csv/: recursive_query_csv.test_slow  test_12314.test_slow  test_csv_httpfs.test  test_csv_httpfs.test_slow  test_csv_httpfs_main.test  test_csv_httpfs_prepared.test  test_csv_remote.test  test_csv_remote.test_slow  test_mixed_lines.test_slow  test_sniff_httpfs.test  test_url_with_plus.test
test/sql/integration/httpfs/copy/csv/parallel/: csv_parallel_httpfs.test  test_parallel_csv.test
test/sql/integration/httpfs/copy/parquet/: delta_byte_array_length_mismatch.test  delta_byte_array_multiple_pages.test  parquet_2102.test_slow  parquet_5968.test  parquet_boolean_page.test_slow  snowflake_lineitem.test  test_parquet_force_download.test  test_parquet_remote.test  test_parquet_remote_foreign_files.test  test_yellow_cab.test_slow
test/sql/integration/httpfs/copy/s3/: download_config.test  http_proxy.test  upload_small_file.test  url_encode.test
test/sql/integration/httpfs/delete/: test_issue_1834.test_slow
test/sql/integration/httpfs/httpfs/: ca_cert_file.test  curl_space_encoding.test  globbing.test  internal_issue_2490.test
test/sql/integration/httpfs/json/table/: internal_issue_6807.test_slow  read_json.test  read_json_auto.test_slow  read_json_objects.test
test/sql/integration/httpfs/logging/: file_system_logging.test  http_logging.test
test/sql/integration/httpfs/secrets/: create_secret.test_slow  create_secret_cascading.test_slow  persistent_key_value_secret.test
test/sql/integration/httpfs/settings/: test_disabled_file_system_httpfs.test
test/sql/integration/httpfs/storage/: invalid_unicode_scrambled.test_slow
test/sql/integration/httpfs/storage/external_file_cache/: external_file_cache_httpfs.test  external_file_cache_read_blob.test_slow
test/unittest/: CMakeLists.txt  test_opendal_file_system.cpp  test_opendal_open_options.cpp
